Fix topbar alignment

--- a/style/client.css
+++ b/style/client.css
@@ -336,8 +336,8 @@ select {
 	box-shadow: 0 1px 2px rgba(0,0,0,.2);
 }
 .tabbar.maintabbar {
-	margin-left: 144px;
-	margin-right: 165px;
+	margin-left: 49px;
+	margin-right: 260px;
 	overflow: hidden;
 }
 .tabbar.maintabbar.minitabbar {
